--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -253,6 +253,7 @@ Trac663.rb
 Trac664.rb
 Trac665.rb
 Trac670.rb
+Trac673.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
