--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -254,6 +254,7 @@ Trac664.rb
 Trac665.rb
 Trac670.rb
 Trac673.rb
+Trac675.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
