--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -104,6 +104,7 @@ syntaxErrorsTest.rb
 GprofTest.rb
 RubyUtilsTest.rb
 IdentitySetIndexingTest.rb
+IdentitySetTests.rb
 Ruby_1_8_7_Tests.rb
 PsychTests.rb
 # Regression tests for fixed bugs
