--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -255,6 +255,7 @@ Trac665.rb
 Trac670.rb
 Trac673.rb
 Trac675.rb
+Trac676a.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
