adjust tests; enable 678,679,680

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -261,6 +261,10 @@ Trac673.rb
 Trac675.rb
 Trac676a.rb
 Trac677.rb
+# Trac677b.rb  loaded by Trac677.rb
+Trac678.rb
+Trac679.rb
+Trac680.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
