Added workaround for trac 686 and new test.

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -107,6 +107,7 @@ IdentitySetIndexingTest.rb
 IdentitySetTests.rb
 Ruby_1_8_7_Tests.rb
 PsychTests.rb
+OptParseTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
