--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -267,6 +267,8 @@ Trac677.rb
 Trac678.rb
 Trac679.rb
 Trac680.rb
+Trac685.rb
+Trac686.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
