--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -269,6 +269,7 @@ Trac679.rb
 Trac680.rb
 Trac685.rb
 Trac686.rb
+Trac690.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
