--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -108,6 +108,7 @@ IdentitySetTests.rb
 Ruby_1_8_7_Tests.rb
 PsychTests.rb
 OptParseTest.rb
+testFinalizer.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
