Work-around bundler issue with to_yaml_properites.

--- a/src/experimental/rails3/Rakefile
+++ b/src/experimental/rails3/Rakefile
@@ -19,6 +19,7 @@ task :app do
     sh %{ maglev-ruby \
             -I../rails/activesupport/lib \
             -I../rails/activemodel/lib \
+            -r ../core_ext.rb \
             script/rails server
     }
   end
