--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -109,6 +109,7 @@ Ruby_1_8_7_Tests.rb
 PsychTests.rb
 OptParseTest.rb
 testFinalizer.rb
+MiscTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
