--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ pbm.rb
 lib/ruby/site_ruby/1.8/smalltalk
 lib/maglev/gems
 examples/persistence/gstore/pstore.db
-bin/rake
-/bin/cucumber
-/bin/tt
+.yardoc
+doc
+out
+
