adjust for fixes of Trac 694, 699

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -272,6 +272,7 @@ Trac685.rb
 Trac686.rb
 Trac690.rb
 Trac692.rb
+Trac699.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
