--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -274,6 +274,7 @@ Trac686.rb
 Trac690.rb
 Trac692.rb
 Trac699.rb
+Trac700a.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
