--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -275,6 +275,7 @@ Trac690.rb
 Trac692.rb
 Trac699.rb
 Trac700a.rb
+Trac705.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
