Add test for multimap failure to Rails3 experimental

--- a/src/experimental/rails3/Rakefile
+++ b/src/experimental/rails3/Rakefile
@@ -40,3 +40,10 @@ namespace :mri do
     end
   end
 end
+
+
+desc "Run multitest in maglev"
+task :mm do
+  mmlib = '/Users/pmclain/external/multimap/lib'
+  sh %{ maglev-ruby -I #{mmlib} multitest.rb }  
+end
