--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -276,6 +276,9 @@ Trac692.rb
 Trac699.rb
 Trac700a.rb
 Trac705.rb
+Trac707.rb
+Trac708.rb
+Trac709.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
