--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -279,6 +279,7 @@ Trac705.rb
 Trac707.rb
 Trac708.rb
 Trac709.rb
+Trac712.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
