--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -280,6 +280,7 @@ Trac707.rb
 Trac708.rb
 Trac709.rb
 Trac712.rb
+Trac713.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
