Fix Trac 714. Fix spec failures in methods() and related queries.

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -281,6 +281,7 @@ Trac708.rb
 Trac709.rb
 Trac712.rb
 Trac713.rb
+Trac714.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
