--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "benchmark"]
 	path = benchmark
 	url = git://github.com/acangiano/ruby-benchmark-suite.git
+[submodule "src/experimental/rails3/rails"]
+	path = src/experimental/rails3/rails
+	url = file:///export/smalltalk/maglev/git/rails.git
