--- a/src/experimental/vsd/Rakefile
+++ b/src/experimental/vsd/Rakefile
@@ -1,5 +1,19 @@
 task :default => :tests
+
+desc "Run a perf test"
+task :run do
+  sh %{ maglev-ruby -Ilib script.rb }  
+end
+
+desc "Test the vsd code"
 task :tests, :file do |t,args|
   test_files = args.file || FileList['test/*_test.rb']
   sh %{ $MAGLEV_HOME/bin/testrb -Ilib #{test_files} }
+end
+
+desc "Commit the tree of random people"
+task :commit do
+  cd('../../../examples/persistence/indexing') do
+    sh %{ rake commit }
+  end
 end
