Moved stats methods to bootstrap/System.

--- a/src/experimental/vsd/Rakefile
+++ b/src/experimental/vsd/Rakefile
@@ -1,4 +1,4 @@
-task :default => :tests
+task :default => :test
 
 desc "Run a perf test"
 task :run do
@@ -6,7 +6,7 @@ task :run do
 end
 
 desc "Test the vsd code"
-task :tests, :file do |t,args|
+task :test, :file do |t,args|
   test_files = args.file || FileList['test/*_test.rb']
   sh %{ $MAGLEV_HOME/bin/testrb -Ilib #{test_files} }
 end
