--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -282,6 +282,7 @@ Trac709.rb
 Trac712.rb
 Trac713.rb
 Trac714.rb
+Trac718.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
