--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -283,6 +283,7 @@ Trac712.rb
 Trac713.rb
 Trac714.rb
 Trac718.rb
+Trac719.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
