--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -284,6 +284,7 @@ Trac713.rb
 Trac714.rb
 Trac718.rb
 Trac719.rb
+Trac720.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
