--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -285,6 +285,8 @@ Trac714.rb
 Trac718.rb
 Trac719.rb
 Trac720.rb
+Trac721.rb
+Trac721b.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
