--- a/examples/persistence/indexing/Rakefile
+++ b/examples/persistence/indexing/Rakefile
@@ -35,3 +35,8 @@ desc "Run the tests"
 task :test do
   sh %{ $MAGLEV_HOME/bin/testrb -Ilib #{FileList['test/*_test.rb']} }
 end
+
+desc "Run the blog example"
+task :blog do
+  sh %{ maglev-ruby -Ilib blog_example.rb }
+end
