--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -294,6 +294,8 @@ Trac720.rb
 Trac721.rb
 Trac721b.rb
 Trac721c.rb
+Trac726b.rb
+Trac727.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
