--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = git://github.com/acangiano/ruby-benchmark-suite.git
 [submodule "src/experimental/rails3/rails"]
 	path = src/experimental/rails3/rails
-	url = file:///export/smalltalk/maglev/git/rails.git
+	url = git://git.gemstone.com/repos/maglev/rails.git
