Adjust for fix of 728

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -296,6 +296,7 @@ Trac721b.rb
 Trac721c.rb
 Trac726b.rb
 Trac727.rb
+Trac728.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
