--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -297,6 +297,7 @@ Trac721c.rb
 Trac726b.rb
 Trac727.rb
 Trac728.rb
+Trac738.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
