--- a/src/experimental/web/lighttpd.conf
+++ b/src/experimental/web/lighttpd.conf
@@ -27,16 +27,16 @@ debug.log-file-not-found   = "enable"
 
 static-file.exclude-extensions = ( ".rb", ".scgi" )
 
-# Mount the Sinatra app on '/'
+# Mount the Sinatra app on '/app'
 scgi.server = (
-  "/app/" => ( "localhost" => (
+  "/app" => ((
       "host" => "127.0.0.1",
       "port" => 4567,
       "check-local" => "disable",
-      "disable-time" => 0,
-      "max-procs" => 1
-)))
+#      "disable-time" => 0
+#      "max-procs" => 1
 #      "docroot" => "/",
+)))
 
 scgi.debug = 1
 status.status-url = "/server-status"
