--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -298,6 +298,7 @@ Trac726b.rb
 Trac727.rb
 Trac728.rb
 Trac738.rb
+Trac740.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
