--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -299,9 +299,11 @@ Trac727.rb
 Trac728.rb
 Trac738.rb
 Trac740.rb
+Trac743.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
 SmalltalkFFITest.rb
+Trac745.rb  # does an empty commit_transaction
