--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -302,6 +302,7 @@ Trac738.rb
 Trac740.rb
 Trac743.rb
 Trac747.rb
+Trac748.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
