--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -281,7 +281,7 @@ Trac690.rb
 Trac692.rb
 Trac699.rb
 Trac700a.rb
-#Trac704.rb  # Commented out until IdentitySet#allocate starts working
+Trac704.rb
 Trac705.rb
 Trac707.rb
 Trac708.rb
