--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -303,6 +303,7 @@ Trac740.rb
 Trac743.rb
 Trac747.rb
 Trac748.rb
+Trac749.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
