--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -283,6 +283,8 @@ Trac699.rb
 Trac700a.rb
 Trac704.rb
 Trac705.rb
+Trac706.rb
+Trac706b.rb
 Trac707.rb
 Trac708.rb
 Trac709.rb
@@ -304,6 +306,7 @@ Trac743.rb
 Trac747.rb
 Trac748.rb
 Trac749.rb
+Trac751.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
