--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -307,6 +307,8 @@ Trac747.rb
 Trac748.rb
 Trac749.rb
 Trac751.rb
+Trac753a.rb
+Trac753.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
