--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -310,6 +310,7 @@ Trac751.rb
 Trac752.rb
 Trac753a.rb
 Trac753.rb
+Trac754.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
