--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -104,6 +104,7 @@ syntaxErrorsTest.rb
 GprofTest.rb
 RubyUtilsTest.rb
 OptParseTest.rb
+ProcessTest.rb
 testFinalizer.rb
 #
 # Tests which use Test::Unit  ; Test::Unit is upset by something later on
