--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -311,6 +311,7 @@ Trac752.rb
 Trac753a.rb
 Trac753.rb
 Trac754.rb
+Trac762.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
