--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -313,6 +313,8 @@ Trac753a.rb
 Trac753.rb
 Trac754.rb
 Trac762.rb
+Trac763.rb
+Trac764.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
