--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -315,6 +315,7 @@ Trac754.rb
 Trac762.rb
 Trac763.rb
 Trac764.rb
+Trac765.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
