--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -316,6 +316,8 @@ Trac762.rb
 Trac763.rb
 Trac764.rb
 Trac765.rb
+Trac768.rb
+Trac769.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
