--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -318,6 +318,7 @@ Trac764.rb
 Trac765.rb
 Trac768.rb
 Trac769.rb
+Trac770.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
