--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -319,6 +319,7 @@ Trac765.rb
 Trac768.rb
 Trac769.rb
 Trac770.rb
+Trac771.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
