--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -320,6 +320,7 @@ Trac768.rb
 Trac769.rb
 Trac770.rb
 Trac771.rb
+# Trac772.rb needs rack, rack-mount gems. 772 covered by StructTest.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
