--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -321,6 +321,7 @@ Trac769.rb
 Trac770.rb
 Trac771.rb
 # Trac772.rb needs rack, rack-mount gems. 772 covered by StructTest.rb
+Trac775.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
