--- a/examples/rails/Rakefile
+++ b/examples/rails/Rakefile
@@ -45,21 +45,22 @@ namespace :patch do
 
   desc "Patch v3.0.0 beta4 or rc ActiveSupport gem."
   task :activesupport do
-    { "3.0.0.beta4" => "active_support_1.diff",
-      "3.0.0.rc"    => "active_support_2.diff"}.each do |version,patch|
+    { "3.0.0.beta4" => ["active_support_1.diff"],
+      "3.0.0.rc"    => ["active_support_2.diff", "active_support_3.diff"]}.each do |version,patches|
       as_dir = "#{ENV['MAGLEV_HOME']}/lib/maglev/gems/1.8/gems/activesupport-#{version}"
 
       if File.directory? as_dir
         puts "Patching #{as_dir}"
-        patch_path = File.join(File.dirname(__FILE__), "patches/#{patch}")
-        raise "No patch for #{version} (#{patch_path})" unless File.exist? patch_path
         cd(as_dir) do
-          sh %{ patch -p2 < #{patch_path} }
+          patches.each do |patch|
+            patch_path = File.join(File.dirname(__FILE__), "patches/#{patch}")
+            raise "No patch for #{version} (#{patch_path})" unless File.exist? patch_path
+            sh %{ patch -p2 < #{patch_path} }
+          end
         end
       end
-      
+
     end
   end
-
 
 end
