--- a/examples/rails/myapp/Rakefile
+++ b/examples/rails/myapp/Rakefile
@@ -4,4 +4,4 @@
 require File.expand_path('../config/application', __FILE__)
 require 'rake'
 
-Rails::Application.load_tasks
+Myapp::Application.load_tasks
