--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -323,6 +323,7 @@ Trac771.rb
 # Trac772.rb needs rack, rack-mount gems. 772 covered by StructTest.rb
 Trac775.rb
 Trac778.rb
+Trac779.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
