--- a/examples/rails/Rakefile
+++ b/examples/rails/Rakefile
@@ -46,7 +46,9 @@ namespace :patch do
   desc "Patch v3.0.0 beta4 or rc ActiveSupport gem."
   task :activesupport do
     { "3.0.0.beta4" => ["active_support_1.diff"],
-      "3.0.0.rc"    => ["active_support_2.diff", "active_support_3.diff"]}.each do |version,patches|
+      "3.0.0.rc"    => ["active_support_2.diff",
+                        "active_support_3.diff",
+                        "active_support_4.diff"]}.each do |version,patches|
       as_dir = "#{ENV['MAGLEV_HOME']}/lib/maglev/gems/1.8/gems/activesupport-#{version}"
 
       if File.directory? as_dir
