--- a/examples/rails/Rakefile
+++ b/examples/rails/Rakefile
@@ -36,9 +36,8 @@ end
 namespace :patch do
   desc "patch appname/config/boot.rb for trac757"
   task :app, :appname do |t,args|
-  app = args[:appname]
-  raise "Can't find application: #{app.inspect}" if app.nil? || ! File.exist?(app)
-
+    app = args[:appname]
+    raise "Can't find application: #{app.inspect}" if app.nil? || ! File.exist?(app)
     patch = File.join(PATCH_DIR, "app_config_boot_Trac757.rb")
     cp patch, File.join(app, "config", "boot.rb")
   end
@@ -53,16 +52,28 @@ namespace :patch do
 
       if File.directory? as_dir
         puts "Patching #{as_dir}"
-        cd(as_dir) do
-          patches.each do |patch|
-            patch_path = File.join(File.dirname(__FILE__), "patches/#{patch}")
-            raise "No patch for #{version} (#{patch_path})" unless File.exist? patch_path
-            sh %{ patch -p2 < #{patch_path} }
-          end
+        patches.each do |patch|
+          apply_patch(as_dir, patch)
         end
       end
 
     end
+
   end
 
+  desc "patch the rack-mount-0.6.9 gem"
+  task :rackmount do
+    p_dir = "#{ENV['MAGLEV_HOME']}/lib/maglev/gems/1.8/gems/rack-mount-0.6.9"
+    apply_patch(p_dir, "rack_mount_1.diff")
+  end
+end
+
+def apply_patch(patch_dir, patch_file)
+  if File.directory? patch_dir
+    puts "Applying patch #{patch_file} in #{patch_dir}"
+    cd(patch_dir) do
+      patch_path = File.join(PATCH_DIR, patch_file)
+      sh %{ patch -p2 < #{patch_path} }
+    end
+  end
 end
