--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -324,6 +324,7 @@ Trac771.rb
 Trac775.rb
 Trac778.rb
 Trac779.rb
+Trac782.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
