--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -59,6 +59,7 @@ test_string_misc.rb
 test_string_tr.rb
 test_string_updowncase.rb
 test_stringcount.rb
+StringScanner.rb
 test_enumerable.rb
 test_exception.rb
 FileTest.rb
