--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -326,6 +326,7 @@ Trac775.rb
 Trac778.rb
 Trac779.rb
 Trac782.rb
+Trac783.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
