--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -327,6 +327,7 @@ Trac778.rb
 Trac779.rb
 Trac782.rb
 Trac783.rb
+Trac785.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
