--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -328,6 +328,7 @@ Trac779.rb
 Trac782.rb
 Trac783.rb
 Trac785.rb
+Trac786.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
