--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -329,6 +329,7 @@ Trac782.rb
 Trac783.rb
 Trac785.rb
 Trac786.rb
+Trac787.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
