--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -281,8 +281,10 @@ Trac685.rb
 Trac686.rb
 Trac690.rb
 Trac692.rb
+Trac697.rb
 Trac699.rb
 Trac700a.rb
+Trac701.rb
 Trac704.rb
 Trac705.rb
 Trac706.rb
