Fix 788, 790.  Enhance RubyProcessStatus with capture of low-level complete result array

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -333,6 +333,8 @@ Trac784.rb
 Trac785.rb
 Trac786.rb
 Trac787.rb
+Trac788.rb
+Trac790.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
