--- a/examples/webstack/Rakefile
+++ b/examples/webstack/Rakefile
@@ -2,8 +2,8 @@ require 'rake/testtask'
 
 Rake::TestTask.new do |t|
   t.libs << "lib"
-#  t.test_files = FileList['test/test_*.rb']
-  t.test_files = FileList['test/test_user.rb']
+  t.test_files = FileList['test/test_*.rb']
+#  t.test_files = FileList['test/test_user.rb']
   t.ruby_opts << '-rubygems'
   # t.verbose = true
 end
