--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -335,6 +335,7 @@ Trac786.rb
 Trac787.rb
 Trac788.rb
 Trac790.rb
+Trac795.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
