--- a/examples/webstack/Rakefile
+++ b/examples/webstack/Rakefile
@@ -4,7 +4,8 @@ task :default => :magtag
 
 Rake::TestTask.new do |t|
   t.libs << "lib"
-  t.test_files = FileList['test/test_user.rb',
+  t.libs << "test"
+  t.test_files = FileList['test/magtag/test_user.rb',
                          'test/test_magtag_app.rb',]
 #  t.test_files = FileList['test/test_user.rb']
   t.ruby_opts << '-rubygems'
